--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,6 +13,11 @@ body {
   padding: 0;
   margin: 0;
 
+  font: {
+    size: $font-sm;
+    family: 'Barlow Semi Condensed', sans-serif;
+    weight: 500;
+  }
 }
 
 a,
