--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -10,6 +10,6 @@ $light-grayish-blue: hsl(210, 46%, 95%);
 
 // Font Sizes
 $font-xsm: .5rem; // 8px
-$font-sm: 0.8125rem; // 14px
+$font-sm: .8125rem; // 13px
 $font-med: 1rem; // 16px
 $font-lg: 1.5rem; // 24px
