update image directory

--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -36,8 +36,8 @@
 
     background: {
       color: $moderate-violet;
-      image: url('/app/images/bg-pattern-quotation.svg');
-      position-x: 90%;
+      image: url('https://raw.githubusercontent.com/lancemartija/TestimonialsGridSection/97245d0d1b0d80622de9b06bfd05d48d3302e533/app/images/bg-pattern-quotation.svg');
+      position-x: 95%;
       repeat: no-repeat;
     }
 
