--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -1,6 +1,6 @@
 .card {
   border-radius: .5rem;
-  margin: 1.5rem;
+  margin: .75rem 1.5rem;
   padding: 1.5rem 1.875rem 2.1875rem 1.875rem;
 
   >h1 {
