--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
   font-size: 100%;
-  position: relative;
 }
 
 *,
@@ -12,8 +11,8 @@ html {
 
 body {
   background: $light-grayish-blue;
-  margin: 0 auto;
-  max-width: 1440px;
+  line-height: 1.3;
+  margin: 0;
   padding: 0;
 
   font: {
@@ -54,21 +53,23 @@ a:hover {
 
 // Footer Class
 .attribution {
-  background: $very-dark-grayish-blue;
-  color: $light-grayish-blue;
+  color: $very-dark-blackish-blue;
   text-align: center;
   padding: 1rem;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
 
   >a {
-    color: $light-grayish-blue;
+    color: #a3a3a3;
     text-decoration: underline;
 
     &:hover {
-      color: $light-gray;
+      color: $moderate-violet;
     }
+  }
+
+  @include breakpoint-up(xlarge) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
