add shadow to card

--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: 1.25rem;
   border-radius: .5rem;
+  box-shadow: 40px 60px 50px -47px rgba($color: $very-dark-blackish-blue, $alpha: .25);
   margin: .75rem 1.5rem;
   padding: 1.5rem 2.6rem 1.5rem 1.5rem;
 
