--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -66,7 +66,7 @@ a:hover {
     }
   }
 
-  @include breakpoint-up(xlarge) {
+  @include breakpoint-up(large) {
     position: absolute;
     bottom: 0;
     left: 0;
